--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": "16.x"
+    "node": "16"
   },
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
