--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
     "@svgr/webpack": "^8.1.0",
     "babel-loader": "^9.1.3",
     "bad-words": "^3.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "css-loader": "^6.8.1",
+    "embla-carousel-react": "^8.0.0-rc21",
     "framer-motion": "^10.16.16",
     "gsap": "^3.8.0",
     "howler": "^2.2.3",
     "lottie-web": "^5.8.1",
+    "lucide-react": "^0.316.0",
     "next": "12.0.1",
     "next-pwa": "^5.4.4",
     "react": "^18.2.0",
@@ -28,6 +33,7 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5",
@@ -38,6 +44,8 @@
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "styled-components": "^6.1.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.160.0",
     "typed.js": "^2.0.12",
     "url-loader": "^4.1.1",
