--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "theme_color": "#ff000",
+  "theme_color": "#000000",
   "background_color": "#1c0f1f",
   "display": "standalone",
   "scope": "/",
